apps/rabbitmq/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: rabbitmq
#   namespace: rabbitmq-operator
# spec:
#   ports:
#     - name: amqp
#       port: 5672
#       targetPort: 5672
#     - name: management
#       port: 15672
#       targetPort: 15672
#   selector:
#     app.kubernetes.io/name: rabbitmq
#   # If using LoadBalancer directly, uncomment the next line:
#   # type: LoadBalancer
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: rabbitmq-operator
spec:
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
  selector:
    app.kubernetes.io/name: rabbitmq
  # If using LoadBalancer directly, uncomment the next line:
  # type: LoadBalancer
